--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -80,7 +80,6 @@
       position: relative;
 
       a {
-        color: grey;
         text-decoration: none;
         font-size: 20px;
         text-transform: lowercase;
